# structured-array

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
structured_array/: __init__.py  _normalize.py  array.py  core.py  groupby.py  types.py  typing.py
structured_array/expression/: __init__.py  _array.py  _char.py  _expr.py  _namespace.py  _unitexpr.py
structured_array/testing/: __init__.py  _compare.py
tests/: __init__.py  test_array_methods.py  test_construction.py  test_expression.py  test_groupby.py
