[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structured-array"
dynamic = ["version"]
description = "Efficient manipulation of the numpy structured arrays."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Hanjin Liu", email = "liuhanjin-sc@i.softbank.jp" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.21.0",
]

[project.urls]
Documentation = "https://github.com/Hanjin Liu/structured-array#readme"
Issues = "https://github.com/Hanjin Liu/structured-array/issues"
Source = "https://github.com/Hanjin Liu/structured-array"

[tool.hatch.version]
path = "src/structured_array/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/structured_array tests}"

[tool.coverage.run]
source_pkgs = ["structured_array", "tests"]
branch = true
parallel = true
omit = [
  "src/structured_array/__about__.py",
]

[tool.coverage.paths]
structured_array = ["src/structured_array", "*/structured-array/src/structured_array"]
tests = ["tests", "*/structured-array/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
